--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bech32": "^2.0.0",
+    "bitcoin-core": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "next": "14.2.5",
+    "pg": "^8.12.0",
+    "pg-promise": "^11.9.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
