--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "bcrypt": "^5.1.1",
     "bech32": "^2.0.0",
     "bitcoin-core": "^4.2.0",
+    "docx": "^8.5.0",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
+    "mammoth": "^1.8.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
