--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "bech32": "^2.0.0",
     "bitcoin-core": "^4.2.0",
+    "crypto": "^1.0.1",
     "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "mammoth": "^1.8.0",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
     "react": "^18",
     "react-dom": "^18",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "eslint": "^8",
