--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,16 @@
 .pnp.cjs
 .pnp.loader.mjs
 .yarn/*
-
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
 # testing
 /coverage
 
